[gd_scene load_steps=7 format=3 uid="uid://dnyrpqyw5v4oo"]

[ext_resource type="Script" uid="uid://ri1oquxrwqky" path="res://home.gd" id="1_i7dhl"]
[ext_resource type="Texture2D" uid="uid://q5kuseqdkr7p" path="res://addons/UI/logo_db.png" id="2_j02rv"]
[ext_resource type="Theme" uid="uid://vqbrw34nkhx8" path="res://medieval_theme.tres" id="2_nh1v6"]
[ext_resource type="Texture2D" uid="uid://cky7pqxkkhwp1" path="res://addons/UI/backgorundHome2.jpg" id="2_xujxf"]
[ext_resource type="AudioStream" uid="uid://d2fa7qbjc6xuy" path="res://addons/UI/sounds/soundtrack-menu.mp3" id="5_dhu8p"]
[ext_resource type="AudioStream" uid="uid://by0juq6ifkrko" path="res://addons/UI/sounds/sfx-clickbtn.wav" id="6_xujxf"]

[node name="Home" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i7dhl")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.803922, 0.694118, 0.54902, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -913.0
offset_top = -488.0
offset_right = 907.0
offset_bottom = 536.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_xujxf")

[node name="Title" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -427.0
offset_right = 729.0
offset_bottom = 597.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.555, 0.555)
texture = ExtResource("2_j02rv")

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = -82.0
offset_top = 25.0
offset_right = 63.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 18

[node name="StartButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
theme = ExtResource("2_nh1v6")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.968627, 0.878431, 0.713726, 1)
theme_override_colors/font_pressed_color = Color(0.91, 0.82719, 0.6734, 1)
text = "Jogar"
flat = true

[node name="ExitButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
theme = ExtResource("2_nh1v6")
theme_override_colors/font_hover_color = Color(0.968627, 0.878431, 0.713726, 1)
text = "Sair"
flat = true

[node name="SoundtrackMenu" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_dhu8p")
autoplay = true
parameters/looping = true

[node name="HoverbtnSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_xujxf")
volume_db = 24.0

[connection signal="mouse_entered" from="ButtonsContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_entered" from="ButtonsContainer/ExitButton" to="." method="_on_exit_button_mouse_entered"]
